feat: Add back navigation button to growth data template

--- a/myproject/accounts/templates/growth_data.html
+++ b/myproject/accounts/templates/growth_data.html
@@ -21,6 +21,13 @@
             </div>
 
             <div class="flex gap-4 mt-4 md:mt-0">
+                <button onclick="window.location.href='{% url 'childrecord' %}'" 
+                        class="bg-pink-500 text-white px-6 py-3 text-lg rounded-lg hover:bg-pink-600 flex items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+                    </svg>
+                    Back
+                </button>
                 <button class="bg-pink-500 text-white px-6 py-3 text-lg rounded-lg hover:bg-pink-600">EDIT</button>
                 <button class="bg-pink-500 text-white px-6 py-3 text-lg rounded-lg hover:bg-pink-600">REMOVE</button>
             </div>
