--- a/myproject/accounts/templates/growth_data.html
+++ b/myproject/accounts/templates/growth_data.html
@@ -53,7 +53,8 @@
                             class="bg-pink-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-pink-600">
                         Medication List
                     </button>
-                    <button onclick="window.location.href='{% url 'illness_list' %}'" class="bg-pink-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-pink-600">
+                    <button onclick="window.location.href='{% url 'child_illness_list' child.id %}'" 
+                            class="bg-pink-500 text-white px-6 py-3 rounded-lg font-semibold hover:bg-pink-600">
                         Illness List
                     </button>
                 </div>
